# landlab

./: .__atomic-writec9df243d  .codeclimate.yml  .credits.toml  .gitattributes  .gitignore  .gitmodules  .landscape.yaml  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .roll.toml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGES.md  CHANGES.rst  CHANGES.txt  CITATION.cff  CONTRIBUTING.md  FUNDING.md  FUNDING.rst  GenVeg_params_inputs_1col_TS.xlsx  Github - Shortcut.lnk  INSTALL_and_UPDATE_notes.txt  LICENSE  LICENSE.md  LICENSE.rst  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  Sequence-Copy1.ipynb  Sequence.ipynb  USEDBY.md  USEDBY.rst  appveyor.yml  asv.conf.json  component rules draft  (+37 more)
.ci/appveyor/: anaconda_upload.py  deploy_to_anaconda.ps1  deploy_to_pypi.ps1  install.ps1  pypi_upload.py  run_with_env.cmd
.ci/travis/: build_wheels.sh  deploy_to_anaconda.sh  deploy_to_pypi.sh  install_python.sh  run_travis_test.sh
.conda-recipe/: bld.bat  build.sh  meta.yaml  run_test.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: black.yml  changelog.yml  docs.yml  flake8.yml  lint.yml  prerelease.yml  quick.yml  rebase_dependencies.yml  release.yml  test-notebooks.yml  test-terrainbento.yml  test.yml
.travis/: convert_to_python_3.sh  install_python.sh  run_travis_test.sh
2014-docs/: dan_installs_on_linux.rst  dev_guide_releases.rst  getting_started.rst  help_with_python_numpy.rst  manual_index_alt_format.rst  model_grid.rst  standard_names.rst  what_is_landlab.rst  working_with_landlab.rst
2014-docs/landlab_component_guide/: Makefile
2014-docs/model_grid_guide/: diffusion_with_model_grid.py  diffusion_with_model_hex_grid.py  diffusion_with_radial_model_grid.py  example_diffusion_component_driver.py  model_grid_description_and_guide.bbl  model_grid_design_notes.tex  overland_flow_with_model_grid.py  overland_flow_with_model_grid_dem.py  radial_delaunay.eps  test_inputs_for_diffusion_model.txt
Hackaton_May2020/: NST_Example_Use_CSDMS2020.ipynb  NST_Simple_Example.py  NST_example_use_May2020.py  Synthetic_netcdf_builder_landslides.ipynb  Synthetic_netcdf_builder_landslides.py
TheLandlab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
benchmarks/: bench_flexure.py  bench_gradients.py  bench_raster_grid.py  bench_structured_quad.py
continuous-integration/appveyor/: install.ps1
docs/: .__atomic-writef1573304  Makefile  about.rst  build_func_lists.py  build_grid_func_docs.py  build_rst_webpages.py  build_standard_names_list.py  buildlog.txt  celllab_manual.rst  classroom_install.rst  coding_style.rst  compilers_in_windows.rst  conf.py  correcting_python_version.rst  dan_installs_on_linux.rst  dev_guide.rst  dev_guide.rst~  dev_guide_components.rst  dev_guide_install.rst  dev_guide_releases.rst  diffusion_raster_grid_tutorial.rst  dupuit_theory  dupuit_theory.rst  environment.yml  faq.rst  fix_redirects.py  getting_example_files.rst  getting_started.rst  help_with_python_numpy.rst  index.rst  index.toml  index_nmg.rst  install.rst  landlab.ca.boundaries.rst  landlab.ca.celllab_cts.rst  landlab.ca.hex_cts.rst  landlab.ca.raster_cts.rst  landlab.ca.rst  landlab.ca.tests.rst  landlab.clast_tracker.rst  (+167 more)
docs/_static/: landlab.css
docs/_templates/: layout.html
docs/dan_testing_sphinx/: manual_index.rst  manual_index_alt_format.rst
docs/development/: Developing-with-github-and-git.rst
docs/getting_started/: index.rst
docs/index/: landlab_master_index.txt
docs/install/: Correcting-Install-Paths.rst  Installing-Landlab-with-Anaconda.rst  Installing-Landlab.rst  installing_windows_compilers.rst
docs/landlab_component_guide/: Makefile  how_to_build_landlab_components.aux  how_to_build_landlab_components.tex
docs/model_grid_guide/: Makefile  diffusion_with_model_grid.py  diffusion_with_model_hex_grid.py  diffusion_with_radial_model_grid.py  example_diffusion_component_driver.py  model_grid_description_and_guide.tex  model_grid_design_notes.tex  overland_flow_with_model_grid.py  overland_flow_with_model_grid_dem.py  radial_side_view.eps  radial_voronoi.eps  test_inputs_for_diffusion_model.txt
docs/reference/: modules.rst
docs/source/: README.md  citation_registry.rst  citing.rst  component_citation.rst  conf.py  contact_us.rst  funding.rst  index.md  index.rst  installation.md  installation.rst  landlab.components.cubic_nonlinear_hillslope_flux.rst  landlab.components.groundwater.rst  usedby.rst  (+8 more)
genveg/: GenVeg_params_inputs_1col.xlsx  MainGenVegScript.py  load_veg_params.py  main_script_jn.ipynb
joss/: paper.md  papers.bib
landlab/: PerronNLDiff.py  __init__.py  _info.py  _registry.py  _version.py  cmd.py  collections.py  craters.py  decorators.py  framework.py  interfaces.py  model_component.py  model_field.py  model_grid.py  model_parameter_dictionary.py  perron_nl_diff.py  plugin.py  test.nc  test.py
news/: 1208.bugfix  1208.component.1  1208.component.2  1208.feature.1  1208.notebook  1236.misc  1263.feature.rst  1266.bugfix  1284.component  1292.feature  1340.misc  1342.misc  1345.notebook  1356.bugfix  1358.feature  1360.feature  1370.feature  1373.docs  1377.component  1379.bugfix  1383.component  1384.misc  1385.misc  1396.docs  1397.bugfix  1397.bugfix.1  1397.bugfix.2  1397.feature  1397.feature.1  1397.feature.2  1398.feature  1399.bugfix  1399.misc  1399.misc.1  1399.misc.2  1400.notebook  1401.misc  1404.misc  1407.misc  1408.misc  (+320 more)
notebooks/: .__atomic-write95859522  conftest.py  environment.yml  exclude.yml  requirements.in  requirements.txt  run_notebook_checks.py  syllabus.ipynb  teaching  test_notebooks.py  tutorials  tutorials~HEAD  welcome.ipynb  where_to_get_info.ipynb
nst_scratch/: NST_sedpulse_forJeff_Feb2020.py  NST_setup.py  ipython.html  scratch_paper.py  scratch_paper_for_tests.py
requirements/: README.md  docs.txt  notebooks.txt  required.txt  testing.txt
scripts/: dist_to_pypi.sh  introspect_components.py  make_changelog.py  test-installed-landlab.py
tests/: __init__.py  conftest.py  run_raster_model_grid_builtin_unit_test.py  test_param_dict.py
(+3350 files in other folders)
