[build-system]
requires = ["cython", "numpy", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landlab"
description = "Open-source Python package for numerical modeling of Earth surface dynamics."
authors = [
  {email = "mcflugen@gmail.com"},
  {name = "The landlab team"}
]
maintainers = [
  {email = "mcflugen@gmail.com"},
  {name = "The landlab team"}
]
keywords = [
  "bmi",
  "component modeling",
  "earth science",
  "gridding engine",
  "model coupling",
  "numerical modeling",
]
license = {file = "LICENSE.rst"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.9"
dependencies = [
  "bmipy",
  "matplotlib",
  "netcdf4",
  "numpy >=1.20",
  "pyyaml",
  "pyshp != 2.3.0",
  "rich-click",
  "scipy",
  "statsmodels",
  "pandas",
  "xarray >= 0.16",
]
dynamic = ["readme", "version"]

[project.urls]
homepage = "https://github.com/landlab"
documentation = "https://landlab.readthedocs.io"
repository = "https://github.com/landlab"
changelog = "https://github.com/landlab/landlab/blob/develop/CHANGES.rst"

[project.optional-dependencies]
dev = ["nox"]
testing = [
  "coveralls",
  "hypothesis",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-xdist",
]

[project.scripts]
landlab = "landlab.cmd.landlab:landlab"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
landlab = [
  "tests/*txt",
  "data/*asc",
  "data/*nc",
  "data/*shp",
  "test/*shx",
  "data/*dbf",
  "preciptest.in",
  "test_*/*nc",
  "test_*/*asc",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["landlab*"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "AUTHORS.rst"]}
version = {attr = "landlab._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["notebooks", "landlab", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist", "examples"]
addopts = """
  --ignore setup.py
  --tb native
  --durations 16
  --strict-markers
  --doctest-modules
  -vvv
  --ignore-glob=*/animate-landlab-output.ipynb
  --ignore-glob=*/cellular_automaton_vegetation_flat_domain.ipynb
  --ignore-glob=*/cellular_automaton_vegetation_DEM.ipynb
  --ignore-glob=*/lithology_and_litholayers.ipynb
  --ignore-glob=*/nst_scaling_profiling.ipynb
  --ignore-glob=*/test_networkcreator_otherDEMs.ipynb
  --ignore-glob=*/run_network_generator_OpenTopoDEM.ipynb
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "notebook: marks tests as notebook (deselect with '-m \"not notebook\"')"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.check-manifest]
ignore = [".nox", "build"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-*"
skip = "*-musllinux_*"
archs = "x86_64,i686,aarch64,arm64,AMD64,x86"

[tool.conda-lock]
channels = ["conda-forge", "defaults"]
platforms = ["osx-arm64", "linux-64", "osx-64", "win-64"]

[tool.towncrier]
directory = "news"
package = "landlab"
filename = "CHANGES.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/landlab/landlab/issues/{issue}>`_"
title_format = "{version} ({project_date})"

type = [
  {name="New Components", directory="component", showcontent=true},
  {name="New Tutorial Notebooks", directory="notebook", showcontent=true},
  {name="New Features", directory="feature", showcontent=true},
  {name="Bug Fixes", directory="bugfix", showcontent=true},
  {name="Documentation Enhancements", directory="docs", showcontent=true},
  {name="Other Changes and Additions", directory="misc", showcontent=true},
]
